[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ResourceHanRoundedCN-ExtraLight.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Yahei_Monaco.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Editer.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Express" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menus" type="HBoxContainer" parent="Express"]
margin_right = 1024.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="File" type="MenuButton" parent="Express/Menus"]
margin_right = 49.0
margin_bottom = 41.0
size_flags_vertical = 3
text = "File"
items = [ "Open", null, 0, false, false, 0, 0, null, "", false, "Save", null, 0, false, false, 1, 0, null, "", false, "Exit", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="MenuButton" parent="Express/Menus"]
margin_left = 53.0
margin_right = 114.0
margin_bottom = 41.0
size_flags_vertical = 3
text = "Help"
items = [ "About", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="Editor" type="TextEdit" parent="Express"]
margin_top = 45.0
margin_right = 1024.0
margin_bottom = 571.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "fun fact(i) = if (i < 1) i else fact(i-1) * i

#* hello! *#

\"Im here!\"
"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
fold_gutter = true
highlight_all_occurrences = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownBar" type="HBoxContainer" parent="Express"]
margin_top = 575.0
margin_right = 1024.0
margin_bottom = 600.0
alignment = 2

[node name="Position" type="Label" parent="Express/DownBar"]
margin_left = 936.0
margin_right = 1024.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "(12 , 3)"
align = 2
valign = 1

[node name="Popups" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 112.0
margin_right = -200.0
margin_bottom = -112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Open" type="FileDialog" parent="Popups"]
margin_right = 624.0
margin_bottom = 376.0
window_title = "Open File"
mode_overrides_title = false
mode = 0
access = 2
current_dir = "/Mr.Try/MyProject2020/Godot/MyEditer"
current_path = "/Mr.Try/MyProject2020/Godot/MyEditer/"

[node name="Save" type="FileDialog" parent="Popups"]
margin_right = 624.0
margin_bottom = 376.0
window_title = "Save File"
mode_overrides_title = false
access = 2
current_dir = "/Mr.Try/MyProject2020/Godot/MyEditer"
current_path = "/Mr.Try/MyProject2020/Godot/MyEditer/"

[node name="Welcome" type="WindowDialog" parent="Popups"]
margin_right = 624.0
margin_bottom = 376.0

[node name="Label" type="Label" parent="Popups/Welcome"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "Welcome!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="cursor_changed" from="Express/Editor" to="." method="_on_Editer_cursor_changed"]
[connection signal="file_selected" from="Popups/Open" to="." method="_on_Open_file_selected"]
[connection signal="file_selected" from="Popups/Save" to="." method="_on_Save_file_selected"]
